# gatecheck

./: AGENTS.md  BUILDING.md  CLAUDE.md  Cargo.toml  README.md  design.md  requirements.md  tasks.md
.github/workflows/: ci.yml  publish.yml
.hermes/: agent-context.md
artifacts/gatecheck/: comment.md  report.json
contracts/schemas/: gate.policy.v1.json  gate.report.v1.json  gate.snapshot.v1.json
crates/gatecheck/: Cargo.toml
crates/gatecheck-codes/: Cargo.toml
crates/gatecheck-codes/src/: lib.rs
crates/gatecheck-eval/: Cargo.toml
crates/gatecheck-eval/src/: lib.rs
crates/gatecheck-export-markdown/: Cargo.toml
crates/gatecheck-export-markdown/src/: lib.rs
crates/gatecheck-fixtures/: Cargo.toml
crates/gatecheck-fixtures/src/: lib.rs
crates/gatecheck-fs/: Cargo.toml
crates/gatecheck-fs/presets/: conveyor-6.toml
crates/gatecheck-fs/src/: lib.rs
crates/gatecheck-policy/: Cargo.toml
crates/gatecheck-policy/src/: lib.rs
crates/gatecheck-types/: Cargo.toml
crates/gatecheck-types/src/: lib.rs
crates/gatecheck/src/: main.rs
crates/gatecheck/tests/: acceptance.rs
docs/: api-reference.md  architecture.md  testing-strategy.md
examples/conveyor-6/: snapshot.json
fixtures/snapshots/: conveyor-6.pass.json
