[workspace]
members = [
    "crates/gatecheck-codes",
    "crates/gatecheck-types",
    "crates/gatecheck-policy",
    "crates/gatecheck-eval",
    "crates/gatecheck-fs",
    "crates/gatecheck-export-markdown",
    "crates/gatecheck-fixtures",
    "crates/gatecheck",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["EffortlessMetrics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/gatecheck"
homepage = "https://github.com/EffortlessMetrics/gatecheck"
readme = "README.md"
keywords = ["gate", "policy", "ci", "receipts", "governance"]
categories = ["command-line-utilities", "development-tools"]
