[package]
name = "gatecheck-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Policy parsing and semantic validation for gatecheck"

[dependencies]
gatecheck-types = { path = "../gatecheck-types", version = "0.1.0" }
